tests/core/ill-typed/unexpected-lambda/unexpected-lambda-1.stella
language core;

fn twice(f : fn(Nat) -> Nat) -> fn(Nat) -> Nat {
  return fn(n : Nat) {
    return f( fn(n : Nat) { return f(n) } )
  }
}

fn main(n : Nat) -> Nat {
  return twice( fn(x : Nat){ return n } )(n)
}